log
Thu 24 Aug 2023 07:04:13 PM UTC: 
 list.c | 138 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 123 insertions(+), 15 deletions(-)
 tests:  0|0
813b2ea
Thu 24 Aug 2023 07:05:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7562af0
Thu 24 Aug 2023 07:07:56 PM UTC: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:113:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  113 |     return NULL;
      |            ^~~~
In file included from test.c:5:
list.c:107:6: note: declared here
  107 | void pushFront(List * list, void * data)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9b927d4
Thu 24 Aug 2023 07:09:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a0930ab
